made trainer name optional for external training, and refactored code to remove all references to attendee, only trainees from now on.

--- a/FlaskSurveyForm/templates/index.html
+++ b/FlaskSurveyForm/templates/index.html
@@ -256,8 +256,8 @@
                         <!-- Updated the trainees section -->
                         <h3 class="fs-5 border-bottom pb-2 mb-3">Trainees</h3>
                         <div class="mb-3">
-                            {{ form.attendee_emails.label(class="form-label") }}
-                            {{ form.attendee_emails(class="form-control",
+                            {{ form.trainee_emails.label(class="form-label") }}
+                            {{ form.trainee_emails(class="form-control",
                             placeholder="Enter emails separated by commas or spaces",
                             rows=4) }}
                             <small class="form-text text-muted">
