--- a/FlaskSurveyForm/templates/view.html
+++ b/FlaskSurveyForm/templates/view.html
@@ -27,7 +27,7 @@
                 Form #{{ form.id }} - {{ form.training_type }}
                 <small class="d-block mt-1">
                     {% if trainees %}
-                    {{ trainees|length }} attendee{{ 's' if trainees|length > 1 }}
+                    {{ trainees|length }} trainee{{ 's' if trainees|length > 1 }}
                     {% else %}
                     No trainees
                     {% endif %}
