added login feature with stryker ldap, updated tests accordingly, added 'submitted by' to database and view page, added feature to export approved forms to excel.

--- a/FlaskSurveyForm/templates/list.html
+++ b/FlaskSurveyForm/templates/list.html
@@ -23,18 +23,30 @@
         padding: 1rem;
         margin-bottom: 1rem;
     }
+    .btn-group-header {
+        display: flex;
+        gap: 0.5rem; /* Adjust spacing between buttons as needed */
+    }
 </style>
 {% endblock %}
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2 class="fs-4">Training Form Submissions</h2>
-    <a href="{{ url_for('index') }}" class="btn btn-primary">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-            <path d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"/>
-        </svg>
-        New Submission
-    </a>
+    <div class="btn-group-header">
+        <a href="{{ url_for('export_claim5') }}" class="btn btn-success">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-spreadsheet" viewBox="0 0 16 16">
+                <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V9h-3V6h-2v3H6V6H4v3H2V2a1 1 0 0 1 1-1h5.5v2zM3 12v-2h2v2H3zm0 1h2v2H4a1 1 0 0 1-1-1v-1zm3 2v-2h3v2H6zm4 0v-2h3v1a1 1 0 0 1-1 1h-2zm3-3h-3v-2h3v2zm0-3h-3V9h3v2z"/>
+              </svg>
+            Export to Claim 5 Form
+        </a>
+        <a href="{{ url_for('index') }}" class="btn btn-primary">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+                <path d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"/>
+            </svg>
+            New Submission
+        </a>
+    </div>
 </div>
 
 <div class="card mb-4">
