--- a/FlaskSurveyForm/templates/success.html
+++ b/FlaskSurveyForm/templates/success.html
@@ -3,7 +3,7 @@
 {% block title %}Submission Successful{% endblock %}
 
 {% block content %}
-<div class="card">
+<div class="card training-form-container">
     <div class="card-header bg-success text-white">
         <h2 class="fs-4 mb-0">Submission Successful</h2>
     </div>
