--- a/FlaskSurveyForm/templates/base.html
+++ b/FlaskSurveyForm/templates/base.html
@@ -11,6 +11,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}">
 
     {% block extra_head %}{% endblock %}
 </head>
@@ -120,6 +121,10 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- AutoNumeric for currency fields (Task 3) -->
+    <script src="https://cdn.jsdelivr.net/npm/autonumeric@4.10.0/dist/autoNumeric.min.js"></script>
+    <script src="{{ url_for('static', filename='js/currency.js') }}"></script>
 
     {% block scripts %}{% endblock %}
 </body>
