--- a/FlaskSurveyForm/templates/index.html
+++ b/FlaskSurveyForm/templates/index.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="card">
+<div class="card upgraded training-form-container">
     <div class="card-header {% if edit_mode %}bg-secondary{% else %}bg-primary{% endif %} text-white">
         <div class="d-flex justify-content-between align-items-center">
             <h2 class="fs-4 mb-0">
@@ -48,7 +48,7 @@
 
                 <div class="row">
                     <div class="col-md-12 mb-3">
-                        <h3 class="fs-5 border-bottom pb-2 mb-3">Training Details</h3>
+                        <h3 class="fs-5 form-section-title">Training Details</h3>
                     </div>
 
                     <!-- Training Type Selection - first question -->
@@ -87,8 +87,10 @@
                         </div>
 
                         <div id="external-supplier-container" class="col-md-12 mb-3 d-none">
-                            {{ form.supplier_name.label(class="form-label") }}
-                            {{ form.supplier_name(class="form-control", placeholder="Enter supplier or external trainer name") }}
+                            <div class="form-floating">
+                                {{ form.supplier_name(class="form-control", placeholder=" ") }}
+                                {{ form.supplier_name.label }}
+                            </div>
                         </div>
 
                         <!-- Location Fields -->
@@ -107,49 +109,58 @@
                         </div>
 
                         <div id="location-details-container" class="col-md-12 mb-3 d-none">
-                            {{ form.location_details.label(class="form-label") }}
-                            {{ form.location_details(class="form-control", placeholder="Enter location details") }}
-                            <div class="form-text">Required for offsite training</div>
+                            <div class="form-floating">
+                                {{ form.location_details(class="form-control", placeholder=" ") }}
+                                {{ form.location_details.label }}
+                                <div class="form-text">Required for offsite training</div>
+                            </div>
                         </div>
 
-                        <div class="row">
+                        <div class="row g-3">
                             <!-- Trainer Days (only shown for Internal Training) -->
                             <div id="trainer-days-container" class="col-md-6 mb-3 d-none">
-                                {{ form.trainer_days.label(class="form-label") }}
-                                {{ form.trainer_days(class="form-control", type="number", step="0.01", min="0") }}
+                                <div class="form-floating">
+                                    {{ form.trainer_days(class="form-control", type="number", step="0.01", min="0", placeholder=" ") }}
+                                    {{ form.trainer_days.label }}
+                                </div>
                                 <div class="form-text">Enter the amount of time the trainer spent preparing and
-                                    administering
-                                    this training in days i.e. if you spent 4 hours preparing for the training and 8
-                                    hours
-                                    delivering the training, enter 1.5</div>
+                                    administering this training in days</div>
                             </div>
                             <!-- Trainee Days -->
                             <div class="col-md-6 mb-3">
-                                {{ form.trainee_days.label(class="form-label") }}
-                                {{ form.trainee_days(class="form-control", type="number", step="0.01", min="0") }}
+                                <div class="form-floating">
+                                    {{ form.trainee_days(class="form-control", type="number", step="0.01", min="0", placeholder=" ") }}
+                                    {{ form.trainee_days.label }}
+                                </div>
                                 <div class="form-text">How much time the trainees spent at the training, in working days
                                 </div>
                             </div>
                         </div>
 
                         <!-- Training Dates -->
-                        <div class="row">
+                        <div class="row g-3">
                             <div class="col-md-6 mb-3">
-                                {{ form.start_date.label(class="form-label") }}
-                                {{ form.start_date(class="form-control date-picker") }}
+                                <div class="form-floating">
+                                    {{ form.start_date(class="form-control date-picker", placeholder=" ") }}
+                                    {{ form.start_date.label }}
+                                </div>
                             </div>
 
                             <div class="col-md-6 mb-3">
-                                {{ form.end_date.label(class="form-label") }}
-                                {{ form.end_date(class="form-control date-picker") }}
+                                <div class="form-floating">
+                                    {{ form.end_date(class="form-control date-picker", placeholder=" ") }}
+                                    {{ form.end_date.label }}
+                                </div>
                             </div>
                         </div>
 
                         <!-- Training Description -->
                         <div class="row">
                             <div class="col-md-12 mb-3">
-                                {{ form.training_description.label(class="form-label") }}
-                                {{ form.training_description(class="form-control", rows=4, placeholder="Briefly describe the training delivered") }}
+                                <div class="form-floating">
+                                    {{ form.training_description(class="form-control", style="height: 120px", placeholder=" ") }}
+                                    {{ form.training_description.label }}
+                                </div>
                                 <div class="form-text">Briefly describe the training delivered</div>
                             </div>
                         </div>
@@ -157,37 +168,50 @@
                         <!-- Expenses Section -->
                         <div class="row mb-4">
                             <div class="col-md-12">
-                                <h3 class="fs-5 border-bottom pb-2 mb-3">Expenses</h3>
+                                <h3 class="fs-5 form-section-title">Expenses</h3>
                                 <div class="row g-3">
-                                    <div class="col-md-3">
-                                        {{ form.travel_cost.label(class="form-label") }}
-                                        {{ form.travel_cost(class="form-control", placeholder="0.00") }}
-                                    </div>
-                                    <div class="col-md-3">
-                                        {{ form.food_cost.label(class="form-label") }}
-                                        {{ form.food_cost(class="form-control", placeholder="0.00") }}
-                                    </div>
-                                    <div class="col-md-3">
-                                        {{ form.materials_cost.label(class="form-label") }}
-                                        {{ form.materials_cost(class="form-control", placeholder="0.00") }}
-                                    </div>
-                                    <div class="col-md-3">
-                                        {{ form.other_cost.label(class="form-label") }}
-                                        {{ form.other_cost(class="form-control", placeholder="0.00") }}
-                                    </div>
-                                    <div id="other-expense-description-container" class="col-md-12 mb-3 d-none">
-                                        {{ form.other_expense_description.label(class="form-label") }}
-                                        {{ form.other_expense_description(class="form-control", rows=3,
-                                        placeholder="Please describe the other expenses") }}
-                                        <div class="form-text text-danger other-expense-required-text">
-                                            * Required when other expenses are entered
+                                    <div class="col-md-4">
+                                        <div class="form-floating">
+                                            {{ form.travel_cost(class="form-control money", placeholder=" ") }}
+                                            {{ form.travel_cost.label }}
                                         </div>
                                     </div>
-                                    <div class="col-md-12">
-                                        {{ form.concur_claim.label(class="form-label") }}
-                                        {{ form.concur_claim(class="form-control", placeholder="Enter Concur claim number") }}
+                                    <div class="col-md-4">
+                                        <div class="form-floating">
+                                            {{ form.food_cost(class="form-control money", placeholder=" ") }}
+                                            {{ form.food_cost.label }}
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-floating">
+                                            {{ form.materials_cost(class="form-control money", placeholder=" ") }}
+                                            {{ form.materials_cost.label }}
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="col-md-6">
+                                        <div class="form-floating">
+                                            {{ form.other_cost(class="form-control money", placeholder=" ") }}
+                                            {{ form.other_cost.label }}
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-floating">
+                                            {{ form.concur_claim(class="form-control", placeholder=" ") }}
+                                            {{ form.concur_claim.label }}
+                                        </div>
                                         <div id="concur-required-message" class="form-text text-danger d-none mt-1" style="font-size: 0.85em;">
                                             * Required when expenses are entered
+                                        </div>
+                                    </div>
+                                    
+                                    <div id="other-expense-description-container" class="col-md-12 mb-3 d-none">
+                                        <div class="form-floating">
+                                            {{ form.other_expense_description(class="form-control", style="height: 100px", placeholder=" ") }}
+                                            {{ form.other_expense_description.label }}
+                                        </div>
+                                        <div class="form-text text-danger other-expense-required-text">
+                                            * Required when other expenses are entered
                                         </div>
                                     </div>
                                 </div>
@@ -206,13 +230,16 @@
                         <!-- Attachments Section -->
                         <div class="row mb-4">
                             <div class="col-md-12">
-                                <h3 class="fs-5 border-bottom pb-2 mb-3">Attachments</h3>
+                                <h3 class="fs-5 form-section-title">Attachments</h3>
                                 <div id="dropzone" class="dropzone border p-3 mb-3 text-center">
                                     <i class="bi bi-upload fs-1 text-primary"></i>
                                     <p>Drag and drop files here or click to browse</p>
                                     <input type="file" id="file-input" class="d-none" multiple>
                                 </div>
-                                <table class="table table-bordered" id="attachment-table">
+                                <!-- New Attachment Previews Container -->
+                                <div id="attachment-previews"></div>
+                                <!-- Hidden table for compatibility with old scripts if needed -->
+                                <table class="table table-bordered d-none" id="attachment-table">
                                     <thead>
                                         <tr>
                                             <th>File Name</th>
@@ -229,7 +256,7 @@
                     </div>
 
                     <div class="col-md-12 mb-3">
-                        <h3 class="fs-5 border-bottom pb-2 mb-3">Add Trainees</h3>
+                        <h3 class="fs-5 form-section-title">Add Trainees</h3>
                     </div>
 
                     <div class="col-md-12 mb-4">
@@ -252,19 +279,12 @@
                             </div>
 
                             <div id="trainees-list" class="trainees-list"></div>
+                            
+                            <!-- Add Bulk Add button -->
+                            <button type="button" id="bulk-add-trainees-btn" class="btn btn-outline-primary mt-3">
+                                <i class="bi bi-people-fill me-1"></i> Bulk Add Trainees
+                            </button>
                         </div>
-                        <!-- Updated the trainees section -->
-                        <h3 class="fs-5 border-bottom pb-2 mb-3">Trainees</h3>
-                        <div class="mb-3">
-                            {{ form.trainee_emails.label(class="form-label") }}
-                            {{ form.trainee_emails(class="form-control",
-                            placeholder="Enter emails separated by commas or spaces",
-                            rows=4) }}
-                            <small class="form-text text-muted">
-                                Example: john@example.com, jane@domain.com
-                            </small>
-                        </div>
-                        <!-- Ends here Updated TS -->
                     </div>
 
                     <div class="col-md-12 mt-4">
@@ -281,6 +301,35 @@
             </form>
     </div>
 </div>
+
+<!-- Add the Modal for Bulk Adding Trainees -->
+{% block modals %}
+<div class="modal fade" id="bulkAddModal" tabindex="-1" aria-labelledby="bulkAddModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="bulkAddModalLabel">Bulk Add Trainees</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                    <div class="form-floating">
+                        {{ form.trainee_emails(class="form-control auto-resize-textarea", placeholder=" ", rows=4, style="min-height: 120px; max-height: 300px; overflow-y: auto;") }}
+                        {{ form.trainee_emails.label }}
+                    </div>
+                    <small class="form-text text-muted">
+                        Example: john@example.com, jane@domain.com
+                    </small>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" id="add-emails-btn" class="btn btn-primary">Add Emails</button>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
 {% endblock %}
 
 {% block scripts %}
@@ -302,6 +351,26 @@
         const locationDetailsContainer = document.getElementById('location-details-container');
         const otherCostInput = document.getElementById('other_cost');
         const submitButton = document.getElementById('submit-training-form-btn'); // Get the button
+
+        // Auto-resize textarea functionality
+        document.querySelectorAll('.auto-resize-textarea').forEach(textarea => {
+            textarea.addEventListener('input', function() {
+                // Reset height temporarily to get the correct scrollHeight
+                this.style.height = 'auto';
+                
+                // Set new height based on scrollHeight, with a maximum
+                const maxHeight = 300; // Max height in px
+                this.style.height = Math.min(this.scrollHeight, maxHeight) + 'px';
+                
+                // Add scrollbar if content exceeds max height
+                this.style.overflowY = this.scrollHeight > maxHeight ? 'auto' : 'hidden';
+            });
+            
+            // Initialize on page load (in case there's content already)
+            if (textarea.value) {
+                textarea.dispatchEvent(new Event('input'));
+            }
+        });
 
         // --- Expense related elements ---
         const travelCostInput = form.elements['travel_cost'];
